debug: fix save fuction