@@ -51,8 +51,8 @@ application {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_23
-    targetCompatibility = JavaVersion.VERSION_23
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
     // 移除 modularity.inferModulePath，因为不再使用模块系统
 }
 
@@ -67,7 +67,8 @@ run {
                 '--add-modules', 'javafx.controls,javafx.fxml,javafx.base,javafx.graphics,java.logging',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
-                '-Dfile.encoding=UTF-8'
+                '-Dfile.encoding=UTF-8',
+                '--add-opens=javafx.graphics/javafx.scene.paint=ALL-UNNAMED'
         ]
     }
 }
